<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>onl.mdw</groupId>
    <artifactId>braille-zephyr</artifactId>
    <version>${revision}${sha1}${changelist}</version>
    <name>BrailleZephyr</name>
    <description>A simple Braille Ready File (BRF) editor.</description>
    <organization>
        <name>Michael Whapples</name>
    </organization>
    <url>https://github.com/mwhapples/BrailleZephyr</url>
    <distributionManagement>
        <downloadUrl>https://zephyr.brailleblaster-ng.app</downloadUrl>
    </distributionManagement>
    <scm>
        <connection>scm:git:https://github.com/mwhapples/BrailleZephyr.git</connection>
        <developerConnection>scm:git:https://github.com/mwhapples/BrailleZephyr.git</developerConnection>
        <url>https://github.com/mwhapples/BrailleZephyr</url>
    </scm>

    <properties>
        <revision>1.0.0</revision>
        <sha1/>
        <changelist>-SNAPSHOT</changelist>
        <app.fsname>braillezephyr</app.fsname>
        <app.vendor-fsname>mwhapples</app.vendor-fsname>
        <app.contact-email>software@mdw.onl</app.contact-email>
        <app.rdns-name>app.brailleblaster-ng.braillezephyr</app.rdns-name>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <distDirectory>${project.build.directory}</distDirectory>
        <swt.version>3.132.0</swt.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.eclipse.platform</groupId>
                <artifactId>org.eclipse.swt</artifactId>
                <version>${swt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.platform</groupId>
                <artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
                <version>${swt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.platform</groupId>
                <artifactId>org.eclipse.swt.win32.win32.aarch64</artifactId>
                <version>${swt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.platform</groupId>
                <artifactId>org.eclipse.swt.gtk.linux.x86_64</artifactId>
                <version>${swt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.platform</groupId>
                <artifactId>org.eclipse.swt.gtk.linux.aarch64</artifactId>
                <version>${swt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.platform</groupId>
                <artifactId>org.eclipse.swt.gtk.linux.riscv64</artifactId>
                <version>${swt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.platform</groupId>
                <artifactId>org.eclipse.swt.gtk.linux.ppc64le</artifactId>
                <version>${swt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.platform</groupId>
                <artifactId>org.eclipse.swt.cocoa.macosx.x86_64</artifactId>
                <version>${swt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.platform</groupId>
                <artifactId>org.eclipse.swt.cocoa.macosx.aarch64</artifactId>
                <version>${swt.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.eclipse.platform</groupId>
            <artifactId>org.eclipse.swt</artifactId>
        </dependency>
    </dependencies>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.9.0</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.6.2</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>buildnumber-maven-plugin</artifactId>
                    <version>3.2.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <outputDirectory>${distDirectory}</outputDirectory>
                    <archive>
                        <manifest>
                            <mainClass>org.aph.braillezephyr.Main</mainClass>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>java</executable>
                    <arguments>
                        <argument>-Dbraillezephyr.version=${project.version}</argument>
                        <argument>--enable-native-access=ALL-UNNAMED</argument>
                        <argument>-classpath</argument>
                        <classpath/>
                        <argument>org.aph.braillezephyr.Main</argument>
                    </arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>mac-exec</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>-Dbraillezephyr.version=${project.version}</argument>
                                <argument>-XstartOnFirstThread</argument>
                                <argument>--enable-native-access=ALL-UNNAMED</argument>
                                <argument>-classpath</argument>
                                <classpath/>
                                <argument>org.aph.braillezephyr.Main</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>build-dist</id>
            <properties>
                <distDirectory>${project.build.directory}/dist</distDirectory>
            </properties>
            <build>
                <defaultGoal>package</defaultGoal>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>copy-dependenecies-to-dist</id>
                                <goals>
                                    <goal>copy-dependencies</goal>
                                </goals>
                                <phase>package</phase>
                                <configuration>
                                    <outputDirectory>${distDirectory}/lib</outputDirectory>
                                    <excludeArtifactIds>
                                        org.eclipse.swt.win32.win32.x86_64,
                                        org.eclipse.swt.win32.win32.aarch64,
                                        org.eclipse.swt.gtk.linux.x86_64,
                                        org.eclipse.swt.gtk.linux.aarch64,
                                        org.eclipse.swt.gtk.linux.riscv64,
                                        org.eclipse.swt.gtk.linux.ppc64le,
                                        org.eclipse.swt.cocoa.macosx.x86_64
                                        org.eclipse.swt.cocoa.macosx.aarch64
                                    </excludeArtifactIds>
                                    <overWriteReleases>true</overWriteReleases>
                                    <includeScope>runtime</includeScope>
                                </configuration>
                            </execution>
                            <execution>
                                <id>copy-platform-dependencies-to-dist</id>
                                <goals>
                                    <goal>copy</goal>
                                </goals>
                                <phase>package</phase>
                                <configuration>
                                    <artifactItems>
                                        <artifactItem>
                                            <groupId>org.eclipse.platform</groupId>
                                            <artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
                                            <outputDirectory>${distDirectory}/windows-x86_64/lib</outputDirectory>
                                        </artifactItem>
                                        <artifactItem>
                                            <groupId>org.eclipse.platform</groupId>
                                            <artifactId>org.eclipse.swt.win32.win32.aarch64</artifactId>
                                            <outputDirectory>${distDirectory}/windows-aarch64/lib</outputDirectory>
                                        </artifactItem>
                                        <artifactItem>
                                            <groupId>org.eclipse.platform</groupId>
                                            <artifactId>org.eclipse.swt.gtk.linux.x86_64</artifactId>
                                            <outputDirectory>${distDirectory}/linux-x86_64/lib</outputDirectory>
                                        </artifactItem>
                                        <artifactItem>
                                            <groupId>org.eclipse.platform</groupId>
                                            <artifactId>org.eclipse.swt.gtk.linux.aarch64</artifactId>
                                            <outputDirectory>${distDirectory}/linux-aarch64/lib</outputDirectory>
                                        </artifactItem>
                                        <artifactItem>
                                            <groupId>org.eclipse.platform</groupId>
                                            <artifactId>org.eclipse.swt.gtk.linux.riscv64</artifactId>
                                            <outputDirectory>${distDirectory}/linux-riscv64/lib</outputDirectory>
                                        </artifactItem>
                                        <artifactItem>
                                            <groupId>org.eclipse.platform</groupId>
                                            <artifactId>org.eclipse.swt.gtk.linux.ppc64le</artifactId>
                                            <outputDirectory>${distDirectory}/linux-ppc64le/lib</outputDirectory>
                                        </artifactItem>
                                        <artifactItem>
                                            <groupId>org.eclipse.platform</groupId>
                                            <artifactId>org.eclipse.swt.cocoa.macosx.x86_64</artifactId>
                                            <outputDirectory>${distDirectory}/mac-x86_64/lib</outputDirectory>
                                        </artifactItem>
                                        <artifactItem>
                                            <groupId>org.eclipse.platform</groupId>
                                            <artifactId>org.eclipse.swt.cocoa.macosx.aarch64</artifactId>
                                            <outputDirectory>${distDirectory}/mac-aarch64/lib</outputDirectory>
                                        </artifactItem>
                                    </artifactItems>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>buildnumber-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>create-about-properties</id>
                                <goals>
                                    <goal>create-metadata</goal>
                                </goals>
                                <phase>package</phase>
                                <configuration>
                                    <outputDirectory>${project.build.directory}</outputDirectory>
                                    <outputName>about.properties</outputName>
                                    <timestampPropertyName>app.build-date</timestampPropertyName>
                                    <timestampFormat>yyyy-MM-dd HH:mm:ss</timestampFormat>
                                    <revisionPropertyName>app.build-hash</revisionPropertyName>
                                    <applicationPropertyName>app.display-name</applicationPropertyName>
                                    <applicationName>${project.name}</applicationName>
                                    <versionPropertyName>app.version</versionPropertyName>
                                    <version>${revision}</version>
                                    <properties>
                                        <app.fsname>${app.fsname}</app.fsname>
                                        <app.description>${project.description}</app.description>
                                        <app.vendor>${project.organization.name}</app.vendor>
                                        <app.website-url>${project.url}</app.website-url>
                                        <app.vcs-url>${project.scm.url}</app.vcs-url>
                                        <app.site.base-url>${project.distributionManagement.downloadUrl}</app.site.base-url>
                                        <app.vendor-fsname>${app.vendor-fsname}</app.vendor-fsname>
                                        <app.rdns-name>${app.rdns-name}</app.rdns-name>
                                        <app.contact-email>${app.contact-email}</app.contact-email>
                                    </properties>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>